@@ -1,3 +1,10 @@
+2005-01-25 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
+	* include/Frame_Resizer_Base.h,
+	  include/Frame_Resizer_Extended.h,
+	  src/Frame_Resizer_Base.cc,
+	  src/Frame_Resizer_Extended.cc: finally got around to fix this annoying 'flickering' while using the resizer :)
+
 2005-01-23 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
 	* src/GParted_Core.cc: write actually used libpartedversion to stdout on startup. (usefull for debugging)
